--- a/middle-layer/package.json
+++ b/middle-layer/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "mongod": "^2.0.0",
     "mongoose": "^5.12.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "cors": "^2.8.5"
   }
 }
