--- a/middle-layer/package.json
+++ b/middle-layer/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/wyang737/SWEProject#readme",
   "devDependencies": {
+    "eslint": "^7.26.0",
+    "eslint-config-strongloop": "^2.1.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
